--- a/src/app/pages/get-started/get-started.component.scss
+++ b/src/app/pages/get-started/get-started.component.scss
@@ -22,6 +22,8 @@
   // ------------ HEADER ---------------
 
   &__header {
+    z-index: 1;
+    position: relative;
     width: 100%;
     display: flex;
     align-items: center;
