--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,15 @@
+/* Importing Bootstrap SCSS file. */
+@import 'bootstrap/scss/bootstrap';
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
+}
+
+p, h1, h2, h3, h4, h5, h6 {
+  margin-bottom: 0;
 }
 
 .toast__wrapper {
