[AP-3] - Add animation

--- a/src/app/pages/auth/forgot-password/forgot-password.component.html
+++ b/src/app/pages/auth/forgot-password/forgot-password.component.html
@@ -1,5 +1,5 @@
 <div class="auth change-password">
-  <div class="auth__wrapper">
+  <div [@fadeInOnEnter]="" class="auth__wrapper">
     <div class="auth__wrapper-inner">
       <div class="auth__form-wrap">
         <form autocomplete="off" [formGroup]="forgotForm" (ngSubmit)="submitEmail()">
