--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="auth">
-  <div class="auth__wrapper">
+  <div [@fadeInOnEnter]="" class="auth__wrapper">
     <div class="auth__wrapper-inner">
       <div class="auth__form-wrap">
         <form autocomplete="off" [formGroup]="loginForm" (ngSubmit)="submitLogin()">
