[AP-3] - Auth generate enum icons, add icons component

--- a/src/app/shared/components/dropdown/dropdown.component.html
+++ b/src/app/shared/components/dropdown/dropdown.component.html
@@ -3,6 +3,15 @@
     <ng-content></ng-content>
   </div>
   <div ngbDropdownMenu aria-labelledby="dropdown">
-    <button ngbDropdownItem *ngFor="let option of options" (click)="option.onClick()" [ngClass]="option.class">{{ option.title }}</button>
+    <button
+      class="option"
+      ngbDropdownItem
+      *ngFor="let option of options"
+      (click)="option.onClick()"
+      [ngClass]="option.class"
+    >
+      <app-svg-icon *ngIf="option.svgIcon" [classes]="{ 'xs': true, 'red': option.class === 'logout'}" [name]="option.svgIcon"></app-svg-icon>
+      {{ option.title }}
+    </button>
   </div>
 </div>
