--- a/src/app/shared/components/svg-icon/svg-icon.component.scss
+++ b/src/app/shared/components/svg-icon/svg-icon.component.scss
@@ -7,8 +7,8 @@ span {
 }
 
 .xs svg {
-  width: 15px;
-  height: 15px;
+  width: 20px;
+  height: 20px;
 }
 
 .sm svg {
@@ -22,6 +22,5 @@ span {
 }
 
 .red {
-  svg { fill: red }
-  path { fill: red }
+  path { stroke: red }
 }
