--- a/src/app/shared/components/user-avatar/user-avatar.component.scss
+++ b/src/app/shared/components/user-avatar/user-avatar.component.scss
@@ -24,6 +24,13 @@
   }
 }
 
+.xl {
+  img, avatar__loading, avatar__letter {
+    width: 100px;
+    height: 100px;
+  }
+}
+
 @keyframes loading {
   0% {
     background-position: 200% 0;
