--- a/src/app/shared/components/svg-icon/svg-icon.component.scss
+++ b/src/app/shared/components/svg-icon/svg-icon.component.scss
@@ -4,6 +4,10 @@ span {
   justify-content: center;
   width: 100%;
   height: 100%;
+
+  svg, svg path {
+    transition: all .3s ease;
+  }
 }
 
 .xs svg {
@@ -16,11 +20,30 @@ span {
   height: 25px;
 }
 
+.md svg {
+  width: 35px;
+  height: 35px;
+}
+
+.lg svg {
+  width: 50px;
+  height: 50px;
+}
+
 .white {
   svg { fill: white }
-  path { fill: white }
+  path { fill: white; stroke: white }
 }
 
 .red {
   path { stroke: red }
+}
+
+.hover {
+  &\:black:hover svg{
+    path {
+      fill: black;
+      transition: all .3s ease;
+    }
+  }
 }
