--- a/src/app/shared/components/upload-image/upload-image.component.scss
+++ b/src/app/shared/components/upload-image/upload-image.component.scss
@@ -1,5 +1,5 @@
 .upload__container {
-  border: 2px dashed #8371fd;
+  border: 2px dashed lightgray;
   border-radius: 20px;
   margin: 10px 0 15px;
   padding: 50px;
