--- a/src/app/pages/main-pages/main-pages.component.html
+++ b/src/app/pages/main-pages/main-pages.component.html
@@ -1,2 +1,4 @@
 <app-header [isLoading]="isLoading | async"></app-header>
-<router-outlet></router-outlet>
+<div class="router-container">
+  <router-outlet></router-outlet>
+</div>
