--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -5,6 +5,10 @@ header {
   justify-content: space-between;
   padding: 20px 40px;
   border-bottom: 1px solid lightgray;
+  position: fixed;
+  background: white;
+  top: 0;
+  z-index: 3;
 }
 
 .header {
